feat: algorithms imprvmnts.